--- a/index.htm
+++ b/index.htm
@@ -6,14 +6,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
-    <title>Elwood and Dougal's Lego sets</title>
+    <title>Dougal and Elwood's Lego sets</title>
     <link rel="icon" sizes="180x180" href="https://www.lego.com/static/favicon/lego-logo-180.png">
     <link rel="icon" sizes="192x192" href="https://www.lego.com/static/favicon/lego-logo-192.png">
     <link rel="icon" sizes="512x512" href="https://www.lego.com/static/favicon/lego-logo-512.png">
+
+    <link rel="apple-touch-icon" href="https://www.lego.com/static/favicon/lego-logo-512.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://www.lego.com/static/favicon/lego-logo-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://www.lego.com/static/favicon/lego-logo-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://www.lego.com/static/favicon/lego-logo-152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="https://www.lego.com/static/favicon/lego-logo-167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.lego.com/static/favicon/lego-logo-180.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://www.lego.com/static/favicon/lego-logo-192.png">
+    <link rel="apple-touch-startup-image" href="https://www.lego.com/static/favicon/lego-logo-512.png">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow" style="background-color: rgb(255, 207, 0);">
-        <a class="navbar-brand" href="/"><img src="https://www.lego.com/static/favicon/lego-logo-180.png" width="30" height="30" alt="Lego logo"></a>
+        <a class="navbar-brand" href="/">
+          <img src="https://www.lego.com/static/favicon/lego-logo-180.png" width="30" height="30" alt="Lego logo" class="d-inline-block align-top">
+          Dougal &amp; Elwood's Lego
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
