--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
     <title>Dougal and Elwood's Lego sets</title>
@@ -22,7 +23,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow" style="background-color: rgb(255, 207, 0);">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand text-dark font-weight-bold" href="/">
           <img src="https://www.lego.com/static/favicon/lego-logo-180.png" width="30" height="30" alt="Lego logo" class="d-inline-block align-top">
           Dougal &amp; Elwood's Lego
         </a>
